--- a/src/precss/styles.less
+++ b/src/precss/styles.less
@@ -613,6 +613,10 @@ body {
 	.flex();
 }
 
+.says-item {
+	.flex();
+}
+
 .says-section-1 {	
 	margin-right: 10%;
 	.to(820px, {
@@ -620,19 +624,6 @@ body {
 	});	
 	text-align: center;
 	flex-grow: 1;	
-}
-
-.navigation-dots-says {
-	margin-top: 30px;
-	color: #d0d0d0;
-	font-size: 15px;
-	.to(730px, {
-		margin-bottom: 30px;
-	});
-
-	.fa-circle:hover {
-		cursor: pointer;
-	}
 }
 
 .says-section-2 {
@@ -654,29 +645,8 @@ body {
 
 	.text-article {
 		.text-article();
-	}
-
-	.says-raiting {
-		margin-top: 5%;
-	}
-
-	.says-navigation {
-		align-self: center;
-	}
-
-	.says-navigation-item {		
-		font-size: 30px;
-		padding: 12px 22px 12px 20px;
-		box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-		margin: 15px;
-		transition: background-color 0.4s, box-shadow 0.3s;
-		cursor: pointer;
-
-		&:hover {
-			background-color: #71f6eb;
-			box-shadow: 0 6px 10px 0 rgba(0, 0, 0, 0.2);
-		}
-	}
+	}	
+	
 }
 
 /* =============== BRANDS =============== */
